added logo, fixed logo style bug

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="twitter:image" content="https://skrynai.subkinas.com/images/vedejai.jpg" />
   <!-- Replace with actual image URL -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="skrynai.css" />
+  <link rel="stylesheet" href="skrynai.css?v=2">
   <title>Skrynai</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJJP70L1E2"></script>
   <script>
@@ -155,9 +155,7 @@
         <h2>Pagrindiniai rėmėjai</h2>
         <div class="logos sponsors">
           <a href="https://belaiko.lt/kavines/"><img src="./images/Ateik-logo.png" alt="AteikAteik logo"
-              style="scale: 0.85" /></a>
-
-
+              style="scale: 0.65" /></a>
           <a href="https://slideshow.lt/"><img src="./images/slideShow-logo.svg" alt="SlideShow logo" /></a>
           <a href="https://www.facebook.com/event.techLT/"><img src="./images/eventtech-logo-black.webp"
               alt="EventTech logo" /></a>
@@ -165,12 +163,14 @@
               style="scale: 0.8" /></a>
           <a href="https://www.klenergija.lt/"><img src="./images/Klaipedos-energija-logo.png"
               alt="Klaipedos energija logo" style="scale: 0.8" /></a>
+                 <a href="https://saugiscena.eu/"><img src="./images/saugi-scena-logo2.png"
+              alt="Saugi scena logo" style="scale: 0.5"/></a>
+              
         </div>
-        <h2>Informaciniai rėmėjai</h2>
+        <h2>Informacinis partneris</h2>
         <div class="logos info-partners">
           <a href="https://klaipeda.diena.lt/"><img src="./images/klaipeda-logo.svg"
               alt="Klaipeda dienraštis logo" /></a>
-          <a href="https://www.balticum.lt/"><img src="./images/balticum-logo.svg" alt="balticum logo" /></a>
         </div>
       </div>
     </div>
