--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta name="twitter:image" content="https://skrynai.subkinas.com/images/vedejai.jpg" />
   <!-- Replace with actual image URL -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="skrynai.css?v=2">
+  <link rel="stylesheet" href="skrynai.css?v=2.1">
   <title>Skrynai</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJJP70L1E2"></script>
   <script>
@@ -167,10 +167,12 @@
               alt="Saugi scena logo" style="scale: 0.5"/></a>
               
         </div>
-        <h2>Informacinis partneris</h2>
+        <h2>Informaciniai partneriai</h2>
         <div class="logos info-partners">
           <a href="https://klaipeda.diena.lt/"><img src="./images/klaipeda-logo.svg"
               alt="Klaipeda dienraštis logo" /></a>
+                        <a href="#"><img src="./images/klp-film office.png"
+              alt="Klaipėdos kino biuras logo" /></a>
         </div>
       </div>
     </div>
@@ -196,8 +198,8 @@
         <div class="join-card">
           <img class="join-card-icon" src="./images/coffee.svg" alt="coffee icon" />
           <h3>Remk finansiškai</h3>
-          <p>Skrynų festivalis dalyviams NEMOKAMAS dalyviams, tačiau organizavimas vistiek nemažai kainuoja.</p>
-          <p>Prisidėk suma atitinkančia kavos puodelį, prie išlaidų padengimo!</p>
+          <p>Skrynų festivalis dalyviams NEMOKAMAS, tačiau organizavimas kainuoja.</p>
+          <p>Prisidėk suma atitinkančia kavos puodelį!</p>
           <a href="https://ko-fi.com/skrynai"><button class="btn">PAREMK</button></a>
 
         </div>
@@ -205,11 +207,11 @@
         <div class="join-card">
           <img class="join-card-icon" src="./images/money.svg" alt="" />
           <h3>Tapk partneriu!</h3>
-          <p>Partneriai tampa festivalio draugais ir bendrakūrėjais.</p>
           <p>
-            Prisidėdami prie festivalio sėkmės finansiškai ar barteriu, būna matomi kino kūrėjų ir
+            Prisidėdami prie festivalio sėkmės finansiškai ar barteriu draugai būna matomi kino kūrėjų ir
             megėjų
           </p>
+          <p>Partneriai tampa festivalio draugais ir bendrakūrėjais.</p>
         </div>
 
         <div class="join-card">
